fixed shadow on small screens

--- a/css/global.css
+++ b/css/global.css
@@ -77,10 +77,15 @@ width: 0px;
     position: absolute;
     top: 0;
     left: 0;
-    
     width: 100%;
     height: 100%;
-    
     pointer-events: none;
     opacity: .05;
+}
+
+@media screen and (max-width: 800px) {
+    .shadow-text {
+        text-shadow: 0px 0px 70px #000000;
+        color: white;
+    }
 }
